Fix navbar collapse rotate

--- a/public/stylesheets/scss/main.scss
+++ b/public/stylesheets/scss/main.scss
@@ -98,6 +98,7 @@ button.navbar-toggler:focus {
 .form-group.has-search {
 	margin-bottom: 0;
 	box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1) !important;
+	max-width: 460px;
 }
 
 .has-search .form-control {
